--- a/requirements/py39/requirements-dev.txt
+++ b/requirements/py39/requirements-dev.txt
@@ -8,11 +8,9 @@
 
 alabaster==0.7.12
     # via sphinx
-appdirs==1.4.4
-    # via black
 argcomplete==1.12.3
     # via nox
-astroid==2.7.1
+astroid==2.8.0
     # via sphinx-autoapi
 atomicwrites==1.4.0
     # via pytest
@@ -20,13 +18,15 @@ attrs==21.2.0
     # via
     #   flake8-bugbear
     #   pytest
+autoapi==2.0.1
+    # via -r requirements\py39\requirements-dev.in
 babel==2.9.1
     # via sphinx
 backports.entry-points-selectable==1.1.0
     # via virtualenv
 bandit==1.7.0
     # via flake8-bandit
-black==21.7b0
+black==21.9b0
     # via
     #   -r requirements\py39\requirements-dev.in
     #   flake8-black
@@ -36,7 +36,7 @@ certifi==2021.5.30
     #   requests
 cffi==1.14.6
     # via pygit2
-charset-normalizer==2.0.4
+charset-normalizer==2.0.6
     # via
     #   -c requirements\py39\requirements.txt
     #   requests
@@ -52,7 +52,7 @@ colorama==0.4.4
     #   colorlog
     #   pytest
     #   sphinx
-colorlog==5.0.1
+colorlog==6.4.1
     # via nox
 coverage==5.5
     # via
@@ -60,9 +60,9 @@ coverage==5.5
     #   pytest-cov
 darglint==1.8.0
     # via -r requirements\py39\requirements-dev.in
-distlib==0.3.2
+distlib==0.3.3
     # via virtualenv
-docutils==0.16
+docutils==0.17.1
     # via
     #   sphinx
     #   sphinx-rtd-theme
@@ -83,7 +83,7 @@ flake8-bandit==2.1.2
     # via -r requirements\py39\requirements-dev.in
 flake8-black==0.2.3
     # via -r requirements\py39\requirements-dev.in
-flake8-bugbear==21.4.3
+flake8-bugbear==21.9.1
     # via -r requirements\py39\requirements-dev.in
 flake8-docstrings==1.6.0
     # via -r requirements\py39\requirements-dev.in
@@ -93,7 +93,7 @@ flake8-polyfill==1.0.2
     # via flake8-bandit
 gitdb==4.0.7
     # via gitpython
-gitpython==3.1.20
+gitpython==3.1.24
     # via bandit
 idna==3.2
     # via
@@ -132,11 +132,13 @@ pbr==5.6.0
     # via stevedore
 pep517==0.11.0
     # via pip-tools
-pip-tools==6.2.0
+pip-tools==6.3.0
     # via -r requirements\py39\requirements-dev.in
-platformdirs==2.2.0
-    # via virtualenv
-pluggy==0.13.1
+platformdirs==2.3.0
+    # via
+    #   black
+    #   virtualenv
+pluggy==1.0.0
     # via pytest
 py==1.10.0
     # via
@@ -161,7 +163,7 @@ pygments==2.10.0
     #   sphinx
 pyparsing==2.4.7
     # via packaging
-pytest==6.2.4
+pytest==6.2.5
     # via
     #   -r requirements\py39\requirements-dev.in
     #   pytest-cov
@@ -179,7 +181,7 @@ pyyaml==5.4.1
     #   -c requirements\py39\requirements.txt
     #   bandit
     #   sphinx-autoapi
-regex==2021.8.3
+regex==2021.8.28
     # via black
 requests==2.26.0
     # via
@@ -198,14 +200,15 @@ snowballstemmer==2.1.0
     # via
     #   pydocstyle
     #   sphinx
-sphinx==4.1.2
+sphinx==4.2.0
     # via
     #   -r requirements\py39\requirements-dev.in
+    #   autoapi
     #   sphinx-autoapi
     #   sphinx-rtd-theme
 sphinx-autoapi==1.8.4
     # via -r requirements\py39\requirements-dev.in
-sphinx-rtd-theme==0.5.2
+sphinx-rtd-theme==1.0.0
     # via -r requirements\py39\requirements-dev.in
 sphinxcontrib-applehelp==1.0.2
     # via sphinx
@@ -232,27 +235,29 @@ tomli==1.2.1
     # via
     #   black
     #   pep517
-types-pyyaml==5.4.6
+types-pyyaml==5.4.10
     # via -r requirements\py39\requirements-dev.in
-types-requests==2.25.6
+types-requests==2.25.8
     # via -r requirements\py39\requirements-dev.in
-typing-extensions==3.10.0.0
+typing-extensions==3.10.0.2
     # via
+    #   astroid
+    #   black
     #   gitpython
     #   mypy
-unidecode==1.2.0
+unidecode==1.3.2
     # via sphinx-autoapi
-urllib3==1.26.6
+urllib3==1.26.7
     # via
     #   -c requirements\py39\requirements.txt
     #   requests
-virtualenv==20.7.2
+virtualenv==20.8.0
     # via nox
 wheel==0.37.0
     # via pip-tools
 wrapt==1.12.1
     # via astroid
-xdoctest==0.15.6
+xdoctest==0.15.8
     # via -r requirements\py39\requirements-dev.in
 
 # The following packages are considered to be unsafe in a requirements file:
