--- a/requirements/py37/requirements.txt
+++ b/requirements/py37/requirements.txt
@@ -6,39 +6,84 @@
 #
 --index-url https://artifactory.itcm.oneadr.net/api/pypi/pypi-remote/simple
 
+alabaster==0.7.12
+    # via sphinx
+autoapi==2.0.1
+    # via -r requirements\py37\requirements.in
+babel==2.9.1
+    # via sphinx
 certifi==2021.5.30
     # via requests
 charset-normalizer==2.0.6
     # via requests
+colorama==0.4.4
+    # via sphinx
+docutils==0.17.1
+    # via sphinx
 easygui==0.98.2
     # via -r requirements\py37\requirements.in
 idna==3.2
     # via requests
+imagesize==1.2.0
+    # via sphinx
 importlib-metadata==4.8.1
     # via keyring
+jinja2==3.0.1
+    # via sphinx
 keyring==23.2.1
     # via -r requirements\py37\requirements.in
+markupsafe==2.0.1
+    # via jinja2
 numpy==1.21.2
     # via
     #   -r requirements\py37\requirements.in
     #   pandas
+packaging==21.0
+    # via sphinx
 pandas==1.3.3
     # via -r requirements\py37\requirements.in
 pyaml==21.8.3
     # via -r requirements\py37\requirements.in
+pygments==2.10.0
+    # via sphinx
+pyparsing==2.4.7
+    # via packaging
 python-dateutil==2.8.2
     # via pandas
 pytz==2021.1
-    # via pandas
+    # via
+    #   babel
+    #   pandas
 pywin32-ctypes==0.2.0
     # via keyring
 pyyaml==5.4.1
     # via pyaml
 requests==2.26.0
-    # via -r requirements\py37\requirements.in
+    # via
+    #   -r requirements\py37\requirements.in
+    #   sphinx
 six==1.16.0
     # via python-dateutil
+snowballstemmer==2.1.0
+    # via sphinx
+sphinx==4.2.0
+    # via autoapi
+sphinxcontrib-applehelp==1.0.2
+    # via sphinx
+sphinxcontrib-devhelp==1.0.2
+    # via sphinx
+sphinxcontrib-htmlhelp==2.0.0
+    # via sphinx
+sphinxcontrib-jsmath==1.0.1
+    # via sphinx
+sphinxcontrib-qthelp==1.0.3
+    # via sphinx
+sphinxcontrib-serializinghtml==1.1.5
+    # via sphinx
 urllib3==1.26.7
     # via requests
 zipp==3.5.0
     # via importlib-metadata
+
+# The following packages are considered to be unsafe in a requirements file:
+# setuptools
