--- a/requirements/py37/requirements-dev.txt
+++ b/requirements/py37/requirements-dev.txt
@@ -7,9 +7,7 @@
 --index-url https://artifactory.itcm.oneadr.net/api/pypi/pypi-remote/simple
 
 alabaster==0.7.12
-    # via
-    #   -c requirements\py37\requirements.txt
-    #   sphinx
+    # via sphinx
 argcomplete==1.12.3
     # via nox
 astroid==2.8.0
@@ -20,10 +18,10 @@ attrs==21.2.0
     # via
     #   flake8-bugbear
     #   pytest
+autoapi==2.0.1
+    # via -r requirements\py37\requirements-dev.in
 babel==2.9.1
-    # via
-    #   -c requirements\py37\requirements.txt
-    #   sphinx
+    # via sphinx
 backports.entry-points-selectable==1.1.0
     # via virtualenv
 bandit==1.7.0
@@ -48,7 +46,6 @@ click==8.0.1
     #   pip-tools
 colorama==0.4.4
     # via
-    #   -c requirements\py37\requirements.txt
     #   -r requirements\py37\requirements-dev.in
     #   bandit
     #   click
@@ -67,7 +64,6 @@ distlib==0.3.3
     # via virtualenv
 docutils==0.17.1
     # via
-    #   -c requirements\py37\requirements.txt
     #   sphinx
     #   sphinx-rtd-theme
 filelock==3.0.12
@@ -104,22 +100,17 @@ idna==3.2
     #   -c requirements\py37\requirements.txt
     #   requests
 imagesize==1.2.0
-    # via
-    #   -c requirements\py37\requirements.txt
-    #   sphinx
+    # via sphinx
 iniconfig==1.1.1
     # via pytest
 jinja2==3.0.1
     # via
-    #   -c requirements\py37\requirements.txt
     #   sphinx
     #   sphinx-autoapi
 lazy-object-proxy==1.6.0
     # via astroid
 markupsafe==2.0.1
-    # via
-    #   -c requirements\py37\requirements.txt
-    #   jinja2
+    # via jinja2
 mccabe==0.6.1
     # via flake8
 mypy==0.910
@@ -132,7 +123,6 @@ nox==2021.6.12
     # via -r requirements\py37\requirements-dev.in
 packaging==21.0
     # via
-    #   -c requirements\py37\requirements.txt
     #   nox
     #   pytest
     #   sphinx
@@ -169,13 +159,10 @@ pygit2==1.6.1
     # via -r requirements\py37\requirements-dev.in
 pygments==2.10.0
     # via
-    #   -c requirements\py37\requirements.txt
     #   -r requirements\py37\requirements-dev.in
     #   sphinx
 pyparsing==2.4.7
-    # via
-    #   -c requirements\py37\requirements.txt
-    #   packaging
+    # via packaging
 pytest==6.2.5
     # via
     #   -r requirements\py37\requirements-dev.in
@@ -211,13 +198,12 @@ smmap==4.0.0
     # via gitdb
 snowballstemmer==2.1.0
     # via
-    #   -c requirements\py37\requirements.txt
     #   pydocstyle
     #   sphinx
 sphinx==4.2.0
     # via
-    #   -c requirements\py37\requirements.txt
     #   -r requirements\py37\requirements-dev.in
+    #   autoapi
     #   sphinx-autoapi
     #   sphinx-rtd-theme
 sphinx-autoapi==1.8.4
@@ -225,29 +211,17 @@ sphinx-autoapi==1.8.4
 sphinx-rtd-theme==1.0.0
     # via -r requirements\py37\requirements-dev.in
 sphinxcontrib-applehelp==1.0.2
-    # via
-    #   -c requirements\py37\requirements.txt
-    #   sphinx
+    # via sphinx
 sphinxcontrib-devhelp==1.0.2
-    # via
-    #   -c requirements\py37\requirements.txt
-    #   sphinx
+    # via sphinx
 sphinxcontrib-htmlhelp==2.0.0
-    # via
-    #   -c requirements\py37\requirements.txt
-    #   sphinx
+    # via sphinx
 sphinxcontrib-jsmath==1.0.1
-    # via
-    #   -c requirements\py37\requirements.txt
-    #   sphinx
+    # via sphinx
 sphinxcontrib-qthelp==1.0.3
-    # via
-    #   -c requirements\py37\requirements.txt
-    #   sphinx
+    # via sphinx
 sphinxcontrib-serializinghtml==1.1.5
-    # via
-    #   -c requirements\py37\requirements.txt
-    #   sphinx
+    # via sphinx
 stevedore==3.4.0
     # via bandit
 toml==0.10.2
