--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -16,5 +16,5 @@ formats:
 # Optionally set the version of Python and requirements required to build your docs
 python:
    version: "3.8"
-   install:
-   - requirements: requirements/py37/requirements-docs.txt
+   #install:
+   #- requirements: requirements/py37/requirements-docs.txt
