--- a/requirements/py37/requirements-docs.txt
+++ b/requirements/py37/requirements-docs.txt
@@ -12,11 +12,7 @@ alabaster==0.7.12
     # via sphinx-autoapi
 #atomicwrites==1.4.0
     # via pytest
-attrs==21.2.0
-    # via pytest
-autoapi==2.0.1
-    # via -r requirements\py37\requirements-docs.in
-babel==2.9.1
+babel
     # via sphinx
 certifi==2021.5.30
     # via requests
