--- a/requirements/py37/requirements-docs.txt
+++ b/requirements/py37/requirements-docs.txt
@@ -20,7 +20,7 @@ certifi==2021.5.30
     # via pygit2
 charset-normalizer==2.0.6
     # via requests
-click==8.0.1
+#click==8.0.1
     # via pip-tools
 colorama==0.4.4
     # via
