--- a/requirements/py37/requirements-docs.txt
+++ b/requirements/py37/requirements-docs.txt
@@ -27,7 +27,7 @@ charset-normalizer==2.0.6
     #   click
     #   pytest
     #   sphinx
-coverage==5.5
+#coverage==5.5
     # via pytest-cov
 docutils==0.17.1
     # via
