--- a/requirements/py37/requirements-docs.txt
+++ b/requirements/py37/requirements-docs.txt
@@ -19,14 +19,18 @@ colorama==0.4.4
     # via sphinx
 docutils==0.17.1
     # via
+    #   rst2pdf
     #   sphinx
     #   sphinx-rtd-theme
 idna==3.2
     # via requests
 imagesize==1.2.0
     # via sphinx
+importlib-metadata==4.8.1
+    # via rst2pdf
 jinja2==3.0.1
     # via
+    #   rst2pdf
     #   sphinx
     #   sphinx-autoapi
 lazy-object-proxy==1.6.0
@@ -34,17 +38,29 @@ lazy-object-proxy==1.6.0
 markupsafe==2.0.1
     # via jinja2
 packaging==21.0
-    # via sphinx
+    # via
+    #   rst2pdf
+    #   sphinx
+pillow==8.3.2
+    # via reportlab
 pygments==2.10.0
-    # via sphinx
+    # via
+    #   rst2pdf
+    #   sphinx
 pyparsing==2.4.7
     # via packaging
 pytz==2021.1
     # via babel
 pyyaml==5.4.1
     # via sphinx-autoapi
+reportlab==3.6.1
+    # via rst2pdf
 requests==2.26.0
     # via sphinx
+rst2pdf==0.98
+    # via -r requirements\py37\requirements-docs.in
+smartypants==2.0.1
+    # via rst2pdf
 snowballstemmer==2.1.0
     # via sphinx
 sphinx==4.2.0
@@ -76,6 +92,8 @@ urllib3==1.26.7
     # via requests
 wrapt==1.12.1
     # via astroid
+zipp==3.5.0
+    # via importlib-metadata
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
