--- a/requirements/py39/requirements-dev.txt
+++ b/requirements/py39/requirements-dev.txt
@@ -7,12 +7,12 @@
 --index-url https://artifactory.itcm.oneadr.net/api/pypi/pypi-remote/simple
 
 alabaster==0.7.12
-    # via
-    #   -c requirements\py39\requirements.txt
-    #   sphinx
+    # via sphinx
+appdirs==1.4.4
+    # via black
 argcomplete==1.12.3
     # via nox
-astroid==2.8.0
+astroid==2.7.1
     # via sphinx-autoapi
 atomicwrites==1.4.0
     # via pytest
@@ -21,14 +21,12 @@ attrs==21.2.0
     #   flake8-bugbear
     #   pytest
 babel==2.9.1
-    # via
-    #   -c requirements\py39\requirements.txt
-    #   sphinx
+    # via sphinx
 backports.entry-points-selectable==1.1.0
     # via virtualenv
 bandit==1.7.0
     # via flake8-bandit
-black==21.9b0
+black==21.7b0
     # via
     #   -r requirements\py39\requirements-dev.in
     #   flake8-black
@@ -38,7 +36,7 @@ certifi==2021.5.30
     #   requests
 cffi==1.14.6
     # via pygit2
-charset-normalizer==2.0.6
+charset-normalizer==2.0.4
     # via
     #   -c requirements\py39\requirements.txt
     #   requests
@@ -48,14 +46,13 @@ click==8.0.1
     #   pip-tools
 colorama==0.4.4
     # via
-    #   -c requirements\py39\requirements.txt
     #   -r requirements\py39\requirements-dev.in
     #   bandit
     #   click
     #   colorlog
     #   pytest
     #   sphinx
-colorlog==6.4.1
+colorlog==5.0.1
     # via nox
 coverage==5.5
     # via
@@ -63,11 +60,10 @@ coverage==5.5
     #   pytest-cov
 darglint==1.8.0
     # via -r requirements\py39\requirements-dev.in
-distlib==0.3.3
+distlib==0.3.2
     # via virtualenv
-docutils==0.17.1
+docutils==0.16
     # via
-    #   -c requirements\py39\requirements.txt
     #   sphinx
     #   sphinx-rtd-theme
 filelock==3.0.12
@@ -87,7 +83,7 @@ flake8-bandit==2.1.2
     # via -r requirements\py39\requirements-dev.in
 flake8-black==0.2.3
     # via -r requirements\py39\requirements-dev.in
-flake8-bugbear==21.9.1
+flake8-bugbear==21.4.3
     # via -r requirements\py39\requirements-dev.in
 flake8-docstrings==1.6.0
     # via -r requirements\py39\requirements-dev.in
@@ -97,29 +93,24 @@ flake8-polyfill==1.0.2
     # via flake8-bandit
 gitdb==4.0.7
     # via gitpython
-gitpython==3.1.24
+gitpython==3.1.20
     # via bandit
 idna==3.2
     # via
     #   -c requirements\py39\requirements.txt
     #   requests
 imagesize==1.2.0
-    # via
-    #   -c requirements\py39\requirements.txt
-    #   sphinx
+    # via sphinx
 iniconfig==1.1.1
     # via pytest
 jinja2==3.0.1
     # via
-    #   -c requirements\py39\requirements.txt
     #   sphinx
     #   sphinx-autoapi
 lazy-object-proxy==1.6.0
     # via astroid
 markupsafe==2.0.1
-    # via
-    #   -c requirements\py39\requirements.txt
-    #   jinja2
+    # via jinja2
 mccabe==0.6.1
     # via flake8
 mypy==0.910
@@ -132,7 +123,6 @@ nox==2021.6.12
     # via -r requirements\py39\requirements-dev.in
 packaging==21.0
     # via
-    #   -c requirements\py39\requirements.txt
     #   nox
     #   pytest
     #   sphinx
@@ -142,13 +132,11 @@ pbr==5.6.0
     # via stevedore
 pep517==0.11.0
     # via pip-tools
-pip-tools==6.3.0
+pip-tools==6.2.0
     # via -r requirements\py39\requirements-dev.in
-platformdirs==2.3.0
-    # via
-    #   black
-    #   virtualenv
-pluggy==1.0.0
+platformdirs==2.2.0
+    # via virtualenv
+pluggy==0.13.1
     # via pytest
 py==1.10.0
     # via
@@ -169,14 +157,11 @@ pygit2==1.6.1
     # via -r requirements\py39\requirements-dev.in
 pygments==2.10.0
     # via
-    #   -c requirements\py39\requirements.txt
     #   -r requirements\py39\requirements-dev.in
     #   sphinx
 pyparsing==2.4.7
-    # via
-    #   -c requirements\py39\requirements.txt
-    #   packaging
-pytest==6.2.5
+    # via packaging
+pytest==6.2.4
     # via
     #   -r requirements\py39\requirements-dev.in
     #   pytest-cov
@@ -194,7 +179,7 @@ pyyaml==5.4.1
     #   -c requirements\py39\requirements.txt
     #   bandit
     #   sphinx-autoapi
-regex==2021.8.28
+regex==2021.8.3
     # via black
 requests==2.26.0
     # via
@@ -211,43 +196,29 @@ smmap==4.0.0
     # via gitdb
 snowballstemmer==2.1.0
     # via
-    #   -c requirements\py39\requirements.txt
     #   pydocstyle
     #   sphinx
-sphinx==4.2.0
+sphinx==4.1.2
     # via
-    #   -c requirements\py39\requirements.txt
     #   -r requirements\py39\requirements-dev.in
     #   sphinx-autoapi
     #   sphinx-rtd-theme
 sphinx-autoapi==1.8.4
     # via -r requirements\py39\requirements-dev.in
-sphinx-rtd-theme==1.0.0
+sphinx-rtd-theme==0.5.2
     # via -r requirements\py39\requirements-dev.in
 sphinxcontrib-applehelp==1.0.2
-    # via
-    #   -c requirements\py39\requirements.txt
-    #   sphinx
+    # via sphinx
 sphinxcontrib-devhelp==1.0.2
-    # via
-    #   -c requirements\py39\requirements.txt
-    #   sphinx
+    # via sphinx
 sphinxcontrib-htmlhelp==2.0.0
-    # via
-    #   -c requirements\py39\requirements.txt
-    #   sphinx
+    # via sphinx
 sphinxcontrib-jsmath==1.0.1
-    # via
-    #   -c requirements\py39\requirements.txt
-    #   sphinx
+    # via sphinx
 sphinxcontrib-qthelp==1.0.3
-    # via
-    #   -c requirements\py39\requirements.txt
-    #   sphinx
+    # via sphinx
 sphinxcontrib-serializinghtml==1.1.5
-    # via
-    #   -c requirements\py39\requirements.txt
-    #   sphinx
+    # via sphinx
 stevedore==3.4.0
     # via bandit
 toml==0.10.2
@@ -261,29 +232,27 @@ tomli==1.2.1
     # via
     #   black
     #   pep517
-types-pyyaml==5.4.10
+types-pyyaml==5.4.6
     # via -r requirements\py39\requirements-dev.in
-types-requests==2.25.8
+types-requests==2.25.6
     # via -r requirements\py39\requirements-dev.in
-typing-extensions==3.10.0.2
+typing-extensions==3.10.0.0
     # via
-    #   astroid
-    #   black
     #   gitpython
     #   mypy
-unidecode==1.3.2
+unidecode==1.2.0
     # via sphinx-autoapi
-urllib3==1.26.7
+urllib3==1.26.6
     # via
     #   -c requirements\py39\requirements.txt
     #   requests
-virtualenv==20.8.0
+virtualenv==20.7.2
     # via nox
 wheel==0.37.0
     # via pip-tools
 wrapt==1.12.1
     # via astroid
-xdoctest==0.15.8
+xdoctest==0.15.6
     # via -r requirements\py39\requirements-dev.in
 
 # The following packages are considered to be unsafe in a requirements file:
