--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,12 @@
 [metadata]
 name = nordea-analytics
 version = attr: nordea_analytics.__version__
-author = Desk Quants
-author_email = dldkQRDeskQuants@nordea.com
+author = Nordea Desk Quants and Markets Advisory Tools
+author_email = E-advisorySupport@nordea.com
 description = Nordea Analytics Python library
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://bitbucket.itcm.oneadr.net/projects/DQ/repos/nordea-analytics
+url = https://github.com/NordeaOSS/nordea-analytics
 ; TODO: Put useful urls here, like where to report bugs, where to find docs etc
 ;project_urls =
 ;    Bug Tracker = https://github.com/pypa/sampleproject/issues
@@ -17,7 +17,7 @@ classifiers =
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
-    License :: Other/Proprietary License
+    License :: GNU General Public License
     Operating System :: Microsoft :: Windows
 
 [options]
@@ -35,7 +35,6 @@ install_requires =
     numpy>=1,<2
     requests>=2,<3
     pyaml>=20,<22
-dependency_links = https://artifactory.itcm.oneadr.net/api/pypi/pypi-remote/simple/
 
 [options.packages.find]
 where = src
