--- a/setup.cfg
+++ b/setup.cfg
@@ -17,7 +17,7 @@ classifiers =
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
-    License :: GNU General Public License
+    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
     Operating System :: Microsoft :: Windows
 
 [options]
