--- a/setup.cfg
+++ b/setup.cfg
@@ -17,7 +17,7 @@ classifiers =
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
-    License :: GNU General Public License
+    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
     Operating System :: Microsoft :: Windows
 
 [options]
@@ -35,7 +35,6 @@ install_requires =
     numpy>=1,<2
     requests>=2,<3
     pyaml>=20,<22
-dependency_links = https://artifactory.itcm.oneadr.net/api/pypi/pypi-remote/simple/
 
 [options.packages.find]
 where = src
