--- a/setup.cfg
+++ b/setup.cfg
@@ -26,7 +26,6 @@ package_dir =
 packages = find:
 include_package_data = True
 python_requires = >=3.6
-; IMPORTANT: make sure these requirements exactly match the ones under requirements\<version>\requirements.in
 install_requires =
     easygui>=0,<1
     keyring>=21,<24
@@ -35,6 +34,7 @@ install_requires =
     numpy>=1,<2
     requests>=2,<3
     pyaml>=20,<22
+    python-certifi-win32
 
 [options.packages.find]
 where = src
