--- a/src/nordea_analytics/nalib/config.yml
+++ b/src/nordea_analytics/nalib/config.yml
@@ -1,10 +1,11 @@
 service_name: 'Nordea Analytics'
-service_url: 'https://open.test01.nordea.com/instrument-analytics/v1/'
-test_service_url: 'https://open.test01.nordea.com/instrument-analytics/v1/'
+service_url: 'https://open.nordea.com/instrument-analytics/v1/'
+test_service_url: 'https://open.nordea.com/instrument-analytics/v1/'
 login: True
 get_proxy_information: True
 user_suffix: ""
 use_headers: True
+
 max_isins: 300
 max_symbol_timeseries: 100
 max_keyfigures_timeseries: 1
@@ -21,7 +22,11 @@ url_suffix:
   search_dmb_bonds: "search/danishmortgagebonds"
   calculate: "bonds-calculation"
   calculate_horizon: "bonds-horizoncalculation"
-  live_bond_key_figures: "bonds/live-keyfigures"
+  fx_forecast: "fx-forecasts"
+  shift_days: "shift-days"
+  yield_forecast: "yield-forecasts"
+  live_bond_key_figures: "bonds/live-keyfigures-stream"
+  live_bond_key_figures_external: "bonds/live-keyfigures"
 
 results:
   bond_key_figures:
@@ -46,3 +51,12 @@ results:
   search:
     - "data"
     - "search"
+  fx_forecast:
+    - "data"
+    - "fx_forecast"
+shift_days:
+    - "data"
+    - "date"
+  yield_forecast:
+    - "data"
+    - "yield_forecast"
