--- a/src/nordea_analytics/nalib/config.yml
+++ b/src/nordea_analytics/nalib/config.yml
@@ -2,6 +2,9 @@ service_name: 'Nordea Analytics'
 service_url: 'https://open.nordea.com/instrument-analytics/v1/'
 test_service_url: 'https://open.nordea.com/instrument-analytics/v1/'
 login: True
+#get_proxy_information is used for getting outside firewall. Must be True in config_external.yml when releasing.
+#find_proxy function is a Python function for finding proxy auto-config (PAC) files and making HTTP requests that respect them.
+#PAC files are often used in organizations that need fine-grained and centralized control of proxy settings.
 get_proxy_information: True
 user_suffix: ""
 use_headers: True
@@ -13,50 +16,31 @@ max_years_timeseries: 10
 
 url_suffix:
   bond_key_figures: "bonds/keyfigure"
-  time_series: "timeseries"
-  index_composition: "index-composition"
-  curve_time_series: "curves/timeseries"
-  curve: "curves"
-  curve_definition: "curves/definition"
-  search_bonds: "search/bonds"
-  search_dmb_bonds: "search/danishmortgagebonds"
   calculate: "bonds-calculation"
   calculate_horizon: "bonds-horizoncalculation"
+  curve: "curves"
+  curve_definition: "curves/definition"
+  curve_time_series: "curves/timeseries"
   fx_forecast: "fx-forecasts"
+  index_composition: "index-composition"
+  search_bonds: "search/bonds"
+  search_dmb_bonds: "search/danishmortgagebonds"
   shift_days: "shift-days"
+  time_series: "timeseries"
+  year_fraction: "year-fraction"
   yield_forecast: "yield-forecasts"
-  live_bond_key_figures: "bonds/live-keyfigures-stream"
-  live_bond_key_figures_external: "bonds/live-keyfigures"
+  live_bond_key_figures: "bonds/live-keyfigures"
 
+#Squashes json response layers
 results:
-  bond_key_figures:
-    - "data"
-    - "keyfigures"
-  time_series:
-    - "data"
-    - "timeseries"
-  index_composition:
-    - "data"
-    - "underlyings"
-  curve_time_series:
-    - "data"
-    - "response"
-    - "timeseries"
-  curve:
-    - "data"
-    - "curve"
-  curve_definition:
-    - "data"
-    - "definition"
-  search:
-    - "data"
-    - "search"
-  fx_forecast:
-    - "data"
-    - "fx_forecast"
-shift_days:
-    - "data"
-    - "date"
-  yield_forecast:
-    - "data"
-    - "yield_forecast"
+  bond_key_figures: "keyfigures"
+  curve: "curve"
+  curve_definition: "definition"
+  curve_time_series: "timeseries"
+  fx_forecast: "fx_forecast"
+  index_composition: "underlyings"
+  search: "search"
+  shift_days: "date"
+  time_series: "timeseries"
+  year_fraction: "year_fraction"
+  yield_forecast: "yield_forecast"
