--- a/setup.cfg
+++ b/setup.cfg
@@ -31,8 +31,10 @@ install_requires =
     pandas>=1,<2
     numpy>=1,<2
     requests>=2,<3
+    requests-kerberos>=0.14.0
     pyaml>=20,<22
     python-certifi-win32
+    wrapt<=1.13.3
 
 [options.packages.find]
 where = src
