--- a/requirements/py39/requirements.txt
+++ b/requirements/py39/requirements.txt
@@ -10,14 +10,20 @@ idna==3.3
     # via requests
 numpy==1.22.2
     # via
-    #   -r .\requirements\py39\requirements.in
+    #   -r ./requirements.in
     #   pandas
+packaging==21.3
+    # via setuptools-scm
 pandas==1.3.4
-    # via -r .\requirements\py39\requirements.in
+    # via -r ./requirements.in
+pip-system-certs==3.0
+    # via -r ./requirements.in
 pyaml==21.10.1
-    # via -r .\requirements\py39\requirements.in
+    # via -r ./requirements.in
 pycparser==2.21
     # via cffi
+pyparsing==3.0.9
+    # via packaging
 pyspnego[kerberos]==0.5.2
     # via requests-kerberos
 python-dateutil==2.8.2
@@ -28,11 +34,19 @@ pyyaml==6.0
     # via pyaml
 requests==2.26.0
     # via
-    #   -r .\requirements\py39\requirements.in
+    #   -r ./requirements.in
     #   requests-kerberos
 requests-kerberos==0.14.0
-    # via -r .\requirements\py39\requirements.in
+    # via -r ./requirements.in
+setuptools-scm==7.0.5
+    # via pip-system-certs
 six==1.16.0
     # via python-dateutil
+tomli==2.0.1
+    # via setuptools-scm
+typing-extensions==4.3.0
+    # via setuptools-scm
 urllib3==1.26.7
     # via requests
+wrapt==1.14.1
+    # via pip-system-certs
