--- a/requirements/py39/requirements-dev.in
+++ b/requirements/py39/requirements-dev.in
@@ -1,9 +1,4 @@
-numpy==1.22.2
-pandas==1.3.4
-pyaml==21.10.1
-requests==2.26.0
-requests-kerberos==0.14.0
-pip-system-certs==3.0
+-c requirements.txt
 black==21.9b0
 colorama==0.4.4
 coverage==6.0.2
