--- a/requirements/py39/requirements.txt
+++ b/requirements/py39/requirements.txt
@@ -9,21 +9,16 @@ cryptography==37.0.2
 idna==3.3
     # via requests
 numpy==1.22.2
+numpy==1.22.2
     # via
-    #   -r ./requirements.in
+    #   -r .\requirements\py39\requirements.in
     #   pandas
-packaging==21.3
-    # via setuptools-scm
 pandas==1.3.4
-    # via -r ./requirements.in
-pip-system-certs==3.0
-    # via -r ./requirements.in
+    # via -r .\requirements\py39\requirements.in
 pyaml==21.10.1
-    # via -r ./requirements.in
+    # via -r .\requirements\py39\requirements.in
 pycparser==2.21
     # via cffi
-pyparsing==3.0.9
-    # via packaging
 pyspnego[kerberos]==0.5.2
     # via requests-kerberos
 python-dateutil==2.8.2
@@ -34,19 +29,11 @@ pyyaml==6.0
     # via pyaml
 requests==2.26.0
     # via
-    #   -r ./requirements.in
+    #   -r .\requirements\py39\requirements.in
     #   requests-kerberos
 requests-kerberos==0.14.0
-    # via -r ./requirements.in
-setuptools-scm==7.0.5
-    # via pip-system-certs
+    # via -r .\requirements\py39\requirements.in
 six==1.16.0
     # via python-dateutil
-tomli==2.0.1
-    # via setuptools-scm
-typing-extensions==4.3.0
-    # via setuptools-scm
 urllib3==1.26.7
     # via requests
-wrapt==1.14.1
-    # via pip-system-certs
