--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -5,6 +5,11 @@
 # Required
 version: 2
 
+build:
+   os: ubuntu-22.04
+   tools:
+      python: "3.11"
+
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
    configuration: docs/source/conf.py
@@ -17,4 +22,4 @@ formats:
 python:
    version: "3.8"
    install:
-   - requirements: requirements/requirements-docs.txt
+   - requirements: requirements/requirements-docs.txtb
