--- a/setup.cfg
+++ b/setup.cfg
@@ -13,6 +13,7 @@ classifiers =
     Programming Language :: Python :: 3 :: Only
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.11
+    Programming Language :: Python :: 3.12
     License :: OSI Approved :: GNU General Public License v3 (GPLv3)
     Operating System :: Microsoft :: Windows
 
@@ -23,9 +24,9 @@ packages = find:
 include_package_data = True
 python_requires = >=3.9
 install_requires =
-    pandas>=1.5,<2
-    requests>=2,<3
-    pyaml>=20,<24
+    pandas>=2,<3
+    requests>=2.20,<3
+    pyaml>=16.12.0
     pip_system_certs
 
 [options.packages.find]
